--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-seaborn==0.9.0
-Flask==1.0.2
-matplotlib==3.0.2
-pandas==0.23.4
-numpy==1.17.3
-scikit_learn==0.21.3
+streamlit
+pandas>=1.5
+numpy
+scikit-learn
+matplotlib>=3.5
+seaborn>=0.11
+xgboost
+imblearn
+statsmodels
+joblib
